[gd_scene load_steps=17 format=2]

[ext_resource path="res://map/arena.gd" type="Script" id=1]
[ext_resource path="res://map/arena.obj" type="ArrayMesh" id=2]
[ext_resource path="res://map/nets.obj" type="ArrayMesh" id=3]
[ext_resource path="res://map/Bush1.obj" type="ArrayMesh" id=4]
[ext_resource path="res://map/Bush2.obj" type="ArrayMesh" id=5]
[ext_resource path="res://map/Bush3.obj" type="ArrayMesh" id=6]

[sub_resource type="ConvexPolygonShape" id=3]
points = PoolVector3Array( -24.0562, -1.23742, -33.8494, 24.3758, 1.13675, 34.0517, -24.0562, 1.13675, 34.0517, 24.3758, -1.23742, 34.0517, 24.3758, 1.13675, -33.8494, -24.0562, -1.23742, 34.0517, -24.0562, 1.13675, -33.8494, 24.3758, -1.23742, -33.8494 )

[sub_resource type="BoxShape" id=7]
extents = Vector3( 23.7765, 6.96669, 15.7712 )

[sub_resource type="ConvexPolygonShape" id=10]
points = PoolVector3Array( -21.4645, -9.64465, -0.593338, 21.4645, 1.00615, 0.660066, 21.4645, -9.64465, 0.660066, 21.4645, 1.00615, -0.593338, -21.4645, 1.00615, 0.660066, 21.4645, -9.64465, -0.593338, -21.4645, -9.64465, 0.660066, -21.4645, 1.00615, -0.593338 )

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0, 0.231373, 0.435294, 1 )

[sub_resource type="SpatialMaterial" id=2]
flags_vertex_lighting = true
albedo_color = Color( 0.666667, 0.666667, 0.666667, 1 )

[sub_resource type="PlaneMesh" id=4]
size = Vector2( 100, 100 )

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0.133333, 0.435294, 0, 1 )

[sub_resource type="SpatialMaterial" id=8]
albedo_color = Color( 0.501961, 0.223529, 0, 1 )

[sub_resource type="SpatialMaterial" id=9]
flags_unshaded = true
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="ConvexPolygonShape" id=11]
points = PoolVector3Array( 50.1316, -0.131579, 5.13158, -50.1316, -0.131579, -5.13158, -50.1316, -0.131579, 5.13158, 50.1316, -0.131579, -5.13158 )

[node name="arena" type="StaticBody"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 3 )

[node name="side_team_1" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 20.82 )
collision_layer = 2
collision_mask = 2
input_ray_pickable = false
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="side_team_1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7.54568, -3.0236 )
shape = SubResource( 7 )

[node name="side_team_2" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -20.8599 )
collision_layer = 2
collision_mask = 2
input_ray_pickable = false
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="side_team_2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7.54568, 3.19973 )
shape = SubResource( 7 )

[node name="net_area" type="Area" parent="."]
collision_layer = 2
collision_mask = 2
input_ray_pickable = false
monitorable = false

[node name="CollisionShape3" type="CollisionShape" parent="net_area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 9.17784, 0 )
shape = SubResource( 10 )

[node name="arena" type="MeshInstance" parent="."]
mesh = ExtResource( 2 )
material/0 = SubResource( 1 )
material/1 = SubResource( 2 )

[node name="grass" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.135193, 0 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="net" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10.1955, 0 )
mesh = ExtResource( 3 )
material/0 = SubResource( 8 )
material/1 = SubResource( 9 )

[node name="wall" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -33.4774 )
shape = SubResource( 11 )

[node name="wall2" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 33.9949 )
shape = SubResource( 11 )

[node name="wall5" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0.184202 )
shape = SubResource( 11 )

[node name="wall3" type="CollisionShape" parent="."]
transform = Transform( -4.37114e-08, 1, -4.37114e-08, 0, -4.37114e-08, -1, -1, -4.37114e-08, 1.91069e-15, -23.5072, 0, 2.65194 )
shape = SubResource( 11 )

[node name="wall4" type="CollisionShape" parent="."]
transform = Transform( -4.37114e-08, 1, -4.37114e-08, 0, -4.37114e-08, -1, -1, -4.37114e-08, 1.91069e-15, 23.7249, 0, 2.65194 )
shape = SubResource( 11 )

[node name="Tween" type="Tween" parent="."]

[node name="bushes" type="Spatial" parent="."]

[node name="bush" type="MeshInstance" parent="bushes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -33.3113, 0, -1.98557 )
mesh = ExtResource( 4 )
skeleton = NodePath("../..")

[node name="bush2" type="MeshInstance" parent="bushes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -36.8656, 0, 2.89121 )
mesh = ExtResource( 6 )
skeleton = NodePath("../..")

[node name="bush4" type="MeshInstance" parent="bushes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -32.6124, 0, -39.6853 )
mesh = ExtResource( 6 )
skeleton = NodePath("../..")

[node name="bush5" type="MeshInstance" parent="bushes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -42.5853, 0, -35.3987 )
mesh = ExtResource( 4 )
skeleton = NodePath("../..")

[node name="bush6" type="MeshInstance" parent="bushes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -40.2236, -3.8147e-06, -42.6278 )
mesh = ExtResource( 4 )
skeleton = NodePath("../..")

[node name="bush7" type="MeshInstance" parent="bushes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -44.1788, 0, -18.0585 )
mesh = ExtResource( 5 )
skeleton = NodePath("../..")

[node name="bush8" type="MeshInstance" parent="bushes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -46.4386, 0, -15.5482 )
mesh = ExtResource( 6 )
skeleton = NodePath("../..")

[node name="bush10" type="MeshInstance" parent="bushes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -38.3555, 0, 17.3054 )
mesh = ExtResource( 4 )
skeleton = NodePath("../..")

[node name="bush11" type="MeshInstance" parent="bushes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -42.8618, 0, 20.5884 )
mesh = ExtResource( 6 )
skeleton = NodePath("../..")

[node name="bush12" type="MeshInstance" parent="bushes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -37.3228, -3.8147e-06, 24.7412 )
mesh = ExtResource( 4 )
skeleton = NodePath("../..")

[node name="bush13" type="MeshInstance" parent="bushes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -28.7929, 0, 37.3416 )
mesh = ExtResource( 5 )
skeleton = NodePath("../..")

[node name="bush15" type="MeshInstance" parent="bushes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -24.8474, -3.8147e-06, 43.5813 )
mesh = ExtResource( 6 )
skeleton = NodePath("../..")

[node name="bush16" type="MeshInstance" parent="bushes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -43.861, -3.8147e-06, 37.3812 )
mesh = ExtResource( 5 )
skeleton = NodePath("../..")

[node name="bush17" type="MeshInstance" parent="bushes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -46.1653, -3.8147e-06, 42.1225 )
mesh = ExtResource( 4 )
skeleton = NodePath("../..")

[node name="bush19" type="MeshInstance" parent="bushes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 40.6076, -3.8147e-06, 39.7749 )
mesh = ExtResource( 6 )
skeleton = NodePath("../..")

[node name="bush20" type="MeshInstance" parent="bushes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 38.6149, -3.8147e-06, 44.9987 )
mesh = ExtResource( 4 )
skeleton = NodePath("../..")

[node name="bush22" type="MeshInstance" parent="bushes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 30.7249, -7.62939e-06, 30.2169 )
mesh = ExtResource( 5 )
skeleton = NodePath("../..")

[node name="bush23" type="MeshInstance" parent="bushes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 28.278, -7.62939e-06, 39.6959 )
mesh = ExtResource( 4 )
skeleton = NodePath("../..")

[node name="bush24" type="MeshInstance" parent="bushes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 31.7958, -1.14441e-05, 35.9259 )
mesh = ExtResource( 6 )
skeleton = NodePath("../..")

[node name="bush25" type="MeshInstance" parent="bushes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 39.0524, 0, 13.195 )
mesh = ExtResource( 5 )
skeleton = NodePath("../..")

[node name="bush27" type="MeshInstance" parent="bushes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 43.1609, -7.62939e-06, 17.8454 )
mesh = ExtResource( 6 )
skeleton = NodePath("../..")

[node name="bush29" type="MeshInstance" parent="bushes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 32.0182, -7.62939e-06, -19.3349 )
mesh = ExtResource( 4 )
skeleton = NodePath("../..")

[node name="bush30" type="MeshInstance" parent="bushes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 35.5221, -1.14441e-05, -16.6976 )
mesh = ExtResource( 6 )
skeleton = NodePath("../..")

[node name="bush31" type="MeshInstance" parent="bushes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 33.7493, -7.62939e-06, -37.0687 )
mesh = ExtResource( 4 )
skeleton = NodePath("../..")

[node name="bush32" type="MeshInstance" parent="bushes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 28.0324, -7.62939e-06, -41.7729 )
mesh = ExtResource( 6 )
skeleton = NodePath("../..")

[node name="bush34" type="MeshInstance" parent="bushes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -13.2162, -7.62939e-06, -47.881 )
mesh = ExtResource( 4 )
skeleton = NodePath("../..")

[node name="bush35" type="MeshInstance" parent="bushes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -18.0503, -7.62939e-06, -43.6395 )
mesh = ExtResource( 5 )
skeleton = NodePath("../..")

[node name="bush36" type="MeshInstance" parent="bushes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -11.7481, 0.0431685, -43.7932 )
mesh = ExtResource( 5 )
skeleton = NodePath("../..")

[node name="bush38" type="MeshInstance" parent="bushes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8.28127, -7.62939e-06, 41.4831 )
mesh = ExtResource( 6 )
skeleton = NodePath("../..")

[node name="bush39" type="MeshInstance" parent="bushes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.46027, -1.14441e-05, 44.0127 )
mesh = ExtResource( 6 )
skeleton = NodePath("../..")

[connection signal="body_entered" from="side_team_1" to="." method="_on_side_team_1_body_entered"]
[connection signal="body_entered" from="side_team_2" to="." method="_on_side_team_2_body_entered"]
[connection signal="body_entered" from="net_area" to="." method="_on_net_area_body_entered"]
